@@ -5,8 +5,11 @@ apport (1.7-0ubuntu2) UNRELEASED; urgency=low
   * data/general-hooks/ubuntu.py: Detect when a kernel upgrade failure is
     caused by update-initramfs failing, and file the bug on initramfs-tools
     instead of linux
+  * data/package-hooks/source_linux.py: Per discussion with ogasawara, attach
+    ALSA details on kernel bug reports by default.  About 9% of sampled kernel
+    bugs are audio-related.
 
- -- Matt Zimmerman <mdz@ubuntu.com>  Thu, 06 Aug 2009 13:18:27 +0100
+ -- Matt Zimmerman <mdz@ubuntu.com>  Thu, 06 Aug 2009 16:29:14 +0100
 
 apport (1.7-0ubuntu1) karmic; urgency=low
 
